# plainmp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  format.sh  pyproject.toml  setup.py  to_float.sh
.github/workflows/: build_and_test.yaml  check_format.yaml  check_mpl_requirement.yaml
cpp/: LICENSE-MPL2  bindings.cpp  composite_constraint.hpp  constraint.cpp  constraint.hpp  constraint_binding.cpp  constraint_binding.hpp  primitive_sdf.hpp  primitive_sdf_binding.cpp  primitive_sdf_binding.hpp  sequential_constraint.cpp  sequential_constraint.hpp  vector.hpp
cpp/bindings/: bindings.hpp  constraint.cpp  kdtree.cpp  kinematics.cpp  ompl_wrapper.cpp  primitive.cpp  python.cpp
cpp/collision/: binding.cpp  kdtree.cpp  kdtree.hpp  primitive_sdf.hpp  primitive_sdf_binding.cpp  primitive_sdf_binding.hpp
cpp/constraints/: composite_constraint.hpp  primitive.cpp  primitive.hpp  primitive_com_in_polytope.cpp  primitive_com_in_polytope.hpp  primitive_config_point.cpp  primitive_config_point.hpp  primitive_fixed_zaxis.cpp  primitive_fixed_zaxis.hpp  primitive_link_pose.cpp  primitive_link_pose.hpp  primitive_relative_pose.cpp  primitive_relative_pose.hpp  primitive_sphere_collision.cpp  primitive_sphere_collision.hpp  sequential_constraint.cpp  sequential_constraint.hpp
cpp/kinematics/: algorithm.cpp  data_structure.hpp  kinematics.cpp  kinematics.hpp  tinyfk.cpp  tinyfk.hpp  tinyfk_binding.cpp
cpp/ompl/: algorithm_selector.cpp  algorithm_selector.hpp  box_motion_validator.cpp  box_motion_validator.hpp  custom_goal_samplable_region.cpp  custom_goal_samplable_region.hpp  generate_sequence.py  higher.hpp  motion_validator.cpp  motion_validator.hpp  ompl_binding.cpp  ompl_binding.hpp  ompl_thin_wrap.hpp  repair_planner.cpp  repair_planner.hpp  unidirectional_modified.cpp  unidirectional_modified.hpp  wrapper.cpp  (+1 more)
example/: attach_box_ik_and_plan.py  fetch_ik.py  fetch_plan.py  fetch_visualize_coll_spheres.py  humanoid_lift_and_place_box.py  humanoid_planning.py  jaxon_ik.py  panda_plan.py  panda_visualize_coll_spheres.py  pr2_dualarm_ik_and_plan.py  pr2_rarm_ik_and_plan.py  pr2_with_mobile_base.py
maint/: build_wheel.sh
tests/: test_ik.py
third/SDFGen/: CMakeLists.txt
(+102 files in other folders)
